--- a/websites/seite2.html
+++ b/websites/seite2.html
@@ -9,8 +9,8 @@
 <body>
     <div>
         <a href="..\index.html"><button id="home_button1" class="home_button">Home</button></a>
-        <a href=".\seite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
-        <a href=".\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
+        <a href=".\websitesseite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
+        <a href=".\websitesseite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
     </div>
 
     <img id="" src="" alt="">
