--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div>
-        <a href="..\index.html"><img id="index_button" src="" alt=""></a>
-        <a href="..\index.html"><button id="home_button1" class="home_button">Home</button></a>
+        <a href=".\index.html"><img id="index_button" src="" alt=""></a>
+        <a href=".\index.html"><button id="home_button1" class="home_button">Home</button></a>
         <a href=".\websites\seite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
         <h1>Haha</h1>
