modified:   websites/seite3.html modified:   websites/seite3.html

--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -13,6 +13,6 @@
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
     </div>
 
-    <img src="" alt="">
+    <img id="" src="" alt="">
 </body>
 </html>
