--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href=".\index.html"><button id="home_button1" class="home_button">Home</button></a>
         <a href=".\websites\seite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
-        <img src="images/firefox-icon.png" alt="My test image" />
+        <img src="pictures/black.png" alt="My test image" />
 
     </div>
     <script src="scripts/main.js"></script>
