--- a/websites/seite2.html
+++ b/websites/seite2.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seite 2</title>
+    <title>Seite 3</title>
     <link rel="stylesheet" href="..\CSS\styles.css">
 </head>
 <body>
     <div>
         <a href="..\index.html"><button id="home_button1" class="home_button">Home</button></a>
-        <a href=".\seite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
-        <a href=".\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
+        <a href=".\seite1.html"><button id="menu2" class="other_buttons">Aufgabe 1</button></a>
+        <a href=".\seite2.html"><button id="menu3" class="other_buttons">Aufgabe 2</button></a>
+        <a href=".\seite3.html"><button id="menu4" class="other_buttons">Aufgabe 3</button></a>
+        <img src="..\pictures\black.png" id="pictures" alt="My test image" />
     </div>
 
     <img id="" src="" alt="">
