--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -9,8 +9,9 @@
 <body>
     <div>
         <a href="..\index.html"><button id="home_button1" class="home_button">Home</button></a>
-        <a href=".\seite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
-        <a href=".\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
+        <a href=".\seite1.html"><button id="menu2" class="other_buttons">Aufgabe 1</button></a>
+        <a href=".\seite2.html"><button id="menu3" class="other_buttons">Aufgabe 2</button></a>
+        <a href=".\seite3.html"><button id="menu4" class="other_buttons">Aufgabe 3</button></a>
     </div>
 
     <img id="" src="" alt="">
