--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>*Hier der Titel der Website*</title>
+    <title>HTML GFS Aufgaben</title>
     <link rel="icon" href="">
     <link rel="stylesheet" href=".\CSS\styles.css">
 </head>
 <body>
     <div>
-        <a href=".\index.html"><img id="index_button" src="" alt=""></a>
         <a href=".\index.html"><button id="home_button1" class="home_button">Home</button></a>
-        <a href=".\websites\seite2.html"><button id="menu2" class="other_buttons">Seite 2</button></a>
-        <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Seite 3</button></a>
-        <img src="pictures/black.png" alt="My test image" />
-
+        <a href=".\websites\seite1.html"><button id="menu2" class="other_buttons">Aufgabe 1</button></a>
+        <a href=".\websites\seite2.html"><button id="menu3" class="other_buttons">Aufgabe 2</button></a>
+        <a href=".\websites\seite3.html"><button id="menu4" class="other_buttons">Aufgabe 3</button></a>
     </div>
     <script src="scripts/main.js"></script>
 </body>
