--- a/websites/seite5.html
+++ b/websites/seite5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seite 5</title>
+    <title>Aufgabe 5</title>
     <link rel="stylesheet" href="..\CSS\styles.css">
 </head>
 <body>
