--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
-        <p id="text">Besucht diese Website: https://www.schulhomepage.de/webdesign/html#HTML-Code</p>
+        <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text">Besucht diese Website (Klick mich)</p></a>
     </div>
 </body>
 </html>
