modified:   CSS/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>HTML GFS Aufgaben</title>
     <link rel="icon" href="">
     <link rel="stylesheet" href=".\CSS\styles.css">
+    <style>
+        #text{
+            position: absolute; left: 25px; top: 100px; 
+        }
+        #text2{
+            position: absolute; left: 300px; top: 100px;  
+        }
+    </style>
 </head>
 <body>
     <div>
