modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="icon" href="">
     <link rel="stylesheet" href=".\CSS\styles.css">
     <style>
+        p{
+            position: absolute; top: 100px;
+        }
         #text{
             position: absolute; left: 25px; top: 100px; 
         }
         #text2{
-            position: absolute; left: 300px; top: 100px;  
+            position: absolute; left: 300px; top: 100px; 
         }
     </style>
 </head>
