--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <style>
         p{
             position: absolute; top: 100px;
+            font-size: 16pt;
         }
         #text{
-            position: absolute; left: 25px; top: 100px; 
+            position: absolute; left: 50px; top: 100px;
         }
         #text2{
-            position: absolute; left: 300px; top: 100px; 
+            position: absolute; left: 415px; top: 100px; 
         }
     </style>
 </head>
