--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             font-size: 16pt;
         }
         #text{
-            position: absolute; left: 50px; top: 100px;
+            position: absolute; left: 50px;
         }
         #text2{
-            position: absolute; left: 415px; top: 100px; 
+            position: absolute; left: 415px;
         }
     </style>
 </head>
@@ -28,6 +28,7 @@
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="text">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
+        <p></p>
     </div>
 </body>
 </html>
