modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         #text2{
             position: absolute; left: 415px;
         }
+        #text3{
+            position: absolute; left: 50px; top: 125;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +31,7 @@
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="text">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
-        <p></p>
+        <p id="text3">E</p>
     </div>
 </body>
 </html>
