--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href=".\CSS\styles.css">
     <style>
         p{
-            position: absolute; top: 100px;
             font-size: 16pt;
         }
         #text{
-            position: absolute; left: 50px;
+            position: absolute; left: 50px; top: 100px;
         }
         #text2{
-            position: absolute; left: 415px;
+            position: absolute; left: 415px; top: 100px;
         }
         #text3{
-            position: absolute; left: 50px; top: 125;
+            position: absolute; left: 50px; top: 125px;
         }
+
     </style>
 </head>
 <body>
@@ -31,7 +31,10 @@
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="text">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
-        <p id="text3">E</p>
+        <p id="text3">
+            Danach <br>
+            Sollt <br>
+        </p>
     </div>
 </body>
 </html>
