modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="text">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
         <p id="text3">
-            Danach <br>
-            Sollt <br>
+            <u><b>Schritt 1:</b></u><br>
+            <br>
+            <br>
+            Öffnet das Programm "Visual Studio Code" und erstellt eine .html Datei.<br>
+            <br>
+            Diese erstellt ihr indem ihr oben links auf den Reiter "File"/"Datei" klickt und dann auf "New File"/"Neue Datei" klickt.<br>
+            Es sollte ein kleines Dialog-Fenster erscheinen. Die Datei bennent ihr bitte wie folgt: index.html<br>
         </p>
     </div>
 </body>
