modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         #text3{
             position: absolute; left: 50px; top: 125px;
         }
-
+        #AusrufeZeichenBild{
+            position: absolute; left: 50px; top: 50px;
+        }
     </style>
 </head>
 <body>
@@ -32,13 +34,24 @@
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="text">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
         <p id="text3">
+            <br>
             <u><b>Schritt 1:</b></u><br>
             <br>
             <br>
-            Öffnet das Programm "Visual Studio Code" und erstellt eine .html Datei.<br>
+            Öffnet das Programm "Visual Studio Code" und erstellt eine index.html Datei.<br>
             <br>
             Diese erstellt ihr indem ihr oben links auf den Reiter "File"/"Datei" klickt und dann auf "New File"/"Neue Datei" klickt.<br>
             Es sollte ein kleines Dialog-Fenster erscheinen. Die Datei bennent ihr bitte wie folgt: index.html<br>
+            Nachdem ihr diese Datei erstellt habt, seid ihr bereit für Schritt 2.
+            <br>
+            <br>
+            <u><b>Schritt 2:</b></u><br>
+            <br>
+            Ihr seid nun in der inex.html Datei und könnt diese Editieren. Zur Zeit macht diese noch nichts und dazu kommen wir jetzt.<br>
+            <br>
+            Schreibt in eure index.html Datei nur ein "!" und drückt die Enter-Taste. Nun sollte eure Datei wie folgt aussehen:<br>
+            <img src="..\pictures\black.png"/>
+            <br>
         </p>
     </div>
 </body>
