modified:   index.html 	new file:   pictures/AusrufeZeichenBild.png

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <br>
             Diese erstellt ihr indem ihr oben links auf den Reiter "File"/"Datei" klickt und dann auf "New File"/"Neue Datei" klickt.<br>
             Es sollte ein kleines Dialog-Fenster erscheinen. Die Datei bennent ihr bitte wie folgt: index.html<br>
-            Nachdem ihr diese Datei erstellt habt, seid ihr bereit für Schritt 2.
+            Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt habt, seid ihr bereit für Schritt 2.
             <br>
             <br>
             <u><b>Schritt 2:</b></u><br>
