modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
         p{
             font-size: 16pt;
         }
-        #text{
-            position: absolute; left: 50px; top: 100px;
-        }
-        #text2{
-            position: absolute; left: 415px; top: 100px;
-        }
-        #text3{
+        #Text{
             position: absolute; left: 50px; top: 125px;
+        }
+        #LinkText{
+            position: absolute; left: 415px; top: 100px;
         }
         #AusrufeZeichenBild{
             position: absolute; left: 50px; top: 50px;
@@ -32,8 +29,7 @@
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
-        <p id="text">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
-        <p id="text3">
+        <p id="Text">
             <br>
             <u><b>Schritt 1:</b></u><br>
             <br>
@@ -42,16 +38,20 @@
             <br>
             Diese erstellt ihr indem ihr oben links auf den Reiter "File"/"Datei" klickt und dann auf "New File"/"Neue Datei" klickt.<br>
             Es sollte ein kleines Dialog-Fenster erscheinen. Die Datei bennent ihr bitte wie folgt: index.html<br>
-            Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt habt, seid ihr bereit für Schritt 2.
-            <br>
+            Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt habt, seid ihr bereit für Schritt 2.<br>
             <br>
             <u><b>Schritt 2:</b></u><br>
             <br>
             Ihr seid nun in der inex.html Datei und könnt diese Editieren. Zur Zeit macht diese noch nichts und dazu kommen wir jetzt.<br>
             <br>
             Schreibt in eure index.html Datei nur ein "!" und drückt die Enter-Taste. Nun sollte eure Datei wie folgt aussehen:<br>
-            <img src="..\pictures\black.png"/>
+            <img src="..\pictures\AusrufeZeichenBild.png"/>
             <br>
+            Nun seid ihr auch schon bereit für Schritt 3!<br>
+            <br>
+            <u><b>Schritt 3:</b></u><br>
+            <br>
+            Nun öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
         </p>
     </div>
 </body>
