modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             position: absolute; left: 50px; top: 125px;
         }
         #LinkText{
-            position: absolute; left: 415px; top: 100px;
+            position: absolute; left: 450px; top: 918px;
         }
         #AusrufeZeichenBild{
             position: absolute; left: 50px; top: 50px;
@@ -51,7 +51,7 @@
             <br>
             <u><b>Schritt 3:</b></u><br>
             <br>
-            Nun öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="text2">Link</p></a></p>
+            Nun öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="LinkText">Link</p></a></p>
         </p>
     </div>
 </body>
