modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
         #Text{
             position: absolute; left: 50px; top: 125px;
         }
-        #LinkText{
-            position: absolute; left: 450px; top: 969px;
-        }
         #AusrufeZeichenBild{
             position: absolute; left: 50px; top: 50px;
+        }
+        #LinkText1{
+            position: absolute; left: 50px; top: 970px;
+        }
+        #LinkText2{
+            position: absolute; left: 415px; top: 970px;
         }
     </style>
 </head>
@@ -29,6 +32,7 @@
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
+        <p id="LinkText1">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="LinkText2">Link</p></a></p>
         <p id="Text">
             <br>
             <u><b>Schritt 1:</b></u><br>
@@ -53,7 +57,9 @@
             <br>
             <u><b>Schritt 3:</b></u><br>
             <br>
-            Nun öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="LinkText">Link</p></a></p>
+            <br>
+            <Br>
+            Verucht ein Bild, einen
         </p>
     </div>
 </body>
