modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             position: absolute; left: 50px; top: 50px;
         }
         #LinkText1{
-            position: absolute; left: 50px; top: 970px;
+            position: absolute; left: 50px; top: 969px;
         }
         #LinkText2{
-            position: absolute; left: 415px; top: 970px;
+            position: absolute; left: 450px; top: 969px;
         }
     </style>
 </head>
@@ -32,7 +32,6 @@
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
-        <p id="LinkText1">Öffnet diese Website in einem neuen Tab: <a href="https://www.schulhomepage.de/webdesign/html#HTML-Code"><p id="LinkText2">Link</p></a></p>
         <p id="Text">
             <br>
             <u><b>Schritt 1:</b></u><br>
@@ -58,8 +57,13 @@
             <u><b>Schritt 3:</b></u><br>
             <br>
             <br>
-            <Br>
-            Verucht ein Bild, einen
+            Für Schritt 3, bitt öffnet diese 2 Websiten:<br>
+            <br>
+            <a href="https://wiki.selfhtml.org/wiki/HTML/Tutorials/Einstieg/Hypertext_und_Multimedia" target="_blank">HTML Dokumentation</a><br>
+            <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor</a><br>
+            <br>
+            dskjfhgskdhfjskdh
+
         </p>
     </div>
 </body>
