modified:   index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <u><b>Schritt 3:</b></u><br>
             <br>
             <br>
-            Für Schritt 3, bitt öffnet diese 2 Websiten:<br>
+            Für Schritt 3, bitte öffnet diese 2 Websiten:<br>
             <br>
             <a href="https://wiki.selfhtml.org/wiki/HTML/Tutorials/Einstieg/Hypertext_und_Multimedia" target="_blank">HTML Dokumentation</a><br>
             <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor</a><br>
