--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
             <a href="https://wiki.selfhtml.org/wiki/HTML/Tutorials/Einstieg/Hypertext_und_Multimedia" target="_blank">HTML Dokumentation</a><br>
             <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor</a><br>
             <br>
-            dskjfhgskdhfjskdh
-
+            Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programieren.<br>
+            Nachdem ablauf der Zeit solltet ihr auf eurer Website folgendes haben:<br>
+            Einen Button welcher euch zur PMHS-Website leitet, ein Bild eurer Wahl, eine Liste und eine Tabelle.<br>
+            <br>
+            Wer schneller ist darf mal versuchen einen Knopf zu erstellen, welcher einen auf einen anderen Teil<br>
+            eurer Website führt (wie z.B. bei Youtube von der Hompage zu dem Verlauf).
         </p>
     </div>
 </body>
