modified:   index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <br>
             Diese erstellt ihr indem ihr oben links auf den Reiter "File"/"Datei" klickt und dann auf "New File"/"Neue Datei" klickt.<br>
             Es sollte ein kleines Dialog-Fenster erscheinen. Die Datei bennent ihr bitte wie folgt: index.html<br>
-            Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt habt, seid ihr bereit für Schritt 2.<br>
+            Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt, seid ihr bereit für Schritt 2.<br>
             <br>
             <br>
             <u><b>Schritt 2:</b></u><br>
@@ -49,7 +49,10 @@
             Ihr seid nun in der inex.html Datei und könnt diese Editieren. Zur Zeit macht diese noch nichts und dazu kommen wir jetzt.<br>
             <br>
             Schreibt in eure index.html Datei nur ein "!" und drückt die Enter-Taste. Nun sollte eure Datei wie folgt aussehen:<br>
-            <img src="..\pictures\AusrufeZeichenBild.png"/>
+            <img src="..\pictures\AusrufeZeichenBild.png"/><br>
+            Nun ändert bitte den Titel des Dokuments zu einem eurer Wahl. Ihr könnt überprüfen ob eure Änderung übernommen wurde,<br>
+            indem ihr den Speicherort eurer index.html Datei aufsucht und diese durch doppel klicken öffnet.<br>
+            Wenn ihr nun auf den neu geöffneten Tab schaut, sollte dieser total weiß sein aber der Titel/Name des Tabs sollte eurern Änderungen entsprechen<br>
             <br>
             Nun seid ihr auch schon bereit für Schritt 3!<br>
             <br>
@@ -60,14 +63,26 @@
             Für Schritt 3, bitte öffnet diese 2 Websiten:<br>
             <br>
             <a href="https://wiki.selfhtml.org/wiki/HTML/Tutorials/Einstieg/Hypertext_und_Multimedia" target="_blank">HTML Dokumentation</a><br>
-            <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor</a><br>
+            <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor (Wer diesen braucht)</a><br>
             <br>
             Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programieren.<br>
             Nachdem ablauf der Zeit solltet ihr auf eurer Website folgendes haben:<br>
             Einen Button welcher euch zur PMHS-Website leitet, ein Bild eurer Wahl, eine Liste und eine Tabelle.<br>
             <br>
             Wer schneller ist darf mal versuchen einen Knopf zu erstellen, welcher einen auf einen anderen Teil<br>
-            eurer Website führt (wie z.B. bei Youtube von der Hompage zu dem Verlauf).
+            eurer Website führt (wie z.B. bei Youtube von der Hompage zu dem Verlauf).<br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </p>
     </div>
 </body>
