modified:   index.html 	modified:   websites/seite1.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <br>
             Für Schritt 3, bitte öffnet diese 2 Websiten:<br>
             <br>
-            <a href="https://wiki.selfhtml.org/wiki/HTML/Tutorials/Einstieg/Hypertext_und_Multimedia" target="_blank">HTML Dokumentation</a><br>
+            <a href="https://wiki.selfhtml.org/wiki/HTML/Tutorials/Einstieg/Hypertext_und_Multimedia" target="_blank">HTML Dokumentation (Deutsch)</a><br>
+            <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML Dokumentation (Englisch (besser))</a><br>
             <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor (Wer diesen braucht)</a><br>
             <br>
             Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programieren.<br>
