--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             Ihr seid nun in der inex.html Datei und könnt diese Editieren. Zur Zeit macht diese noch nichts und dazu kommen wir jetzt.<br>
             <br>
             Schreibt in eure index.html Datei nur ein "!" und drückt die Enter-Taste. Nun sollte eure Datei wie folgt aussehen:<br>
+            <br>
             <img src="..\pictures\AusrufeZeichenBild.png"/><br>
+            <br>
             Nun ändert bitte den Titel des Dokuments zu einem eurer Wahl. Ihr könnt überprüfen ob eure Änderung übernommen wurde,<br>
             indem ihr den Speicherort eurer index.html Datei aufsucht und diese durch doppel klicken öffnet.<br>
             Wenn ihr nun auf den neu geöffneten Tab schaut, sollte dieser total weiß sein aber der Titel/Name des Tabs sollte eurern Änderungen entsprechen<br>
@@ -68,7 +70,7 @@
             <br>
             Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programieren.<br>
             <br>
-            Zeit: ca. 7 Minuten
+            <u><b>Zeit: ca. 7 Minuten</u></b>
             <br>
             <br>
             <br>
