--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aufgabe 1</title>
     <link rel="stylesheet" href="..\CSS\styles.css">
+    <style>
+        p{
+            font-size: 16pt;
+        }
+        #Text{
+            position: absolute; left: 50px; top: 125px;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -14,9 +22,15 @@
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
-        <p id="text" >Learn for free</p>
+        <div>
+            <a href=".\index.html"><button id="home_button1" class="home_button">Home</button></a>
+            <a href=".\websites\seite1.html"><button id="menu1" class="other_buttons">Aufgabe 1</button></a>
+            <a href=".\websites\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
+            <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
+            <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
+            <a href=".\websites\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
+            <p id="Text">
+            </p>
     </div>
-
-    <img id="" src="" alt="">
 </body>
 </html>
