modified:   CSS/styles.css 	modified:   index.html 	modified:   websites/seite1.html 	modified:   websites/seite2.html 	modified:   websites/seite3.html 	modified:   websites/seite4.html 	modified:   websites/seite5.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         #LinkText2{
             position: absolute; left: 450px; top: 969px;
         }
+        #home_button1{
+            border-color: #00ff88;
+        }
     </style>
 </head>
 <body>
