--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -12,6 +12,9 @@
         #Text{
             position: absolute; left: 50px; top: 125px;
         }
+        #menu1{
+            border-color: #00ff88;
+        }
     </style>
 </head>
 <body>
@@ -23,6 +26,7 @@
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="Text">
+            <u><b>Aufgabe 1:</b></u><br>
         </p>
     </div>
 </body>
