--- a/websites/seite4.html
+++ b/websites/seite4.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aufgabe 4</title>
     <link rel="stylesheet" href="..\CSS\styles.css">
+    <style>
+        p{
+            font-size: 16pt;
+        }
+        #Text{
+            position: absolute; left: 50px; top: 125px;
+        }
+        #menu4{
+            border-color: #00ff88;
+        }
+    </style>
 </head>
 <body>
     <div>
