modified:   websites/seite2.html 	modified:   websites/seite3.html 	modified:   websites/seite4.html 	modified:   websites/seite5.html

--- a/websites/seite5.html
+++ b/websites/seite5.html
@@ -25,8 +25,9 @@
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
+        <p id="Text">
+            <u><b>Aufgabe 5:</b></u><br>
+        </p>
     </div>
-
-    <img id="" src="" alt="">
 </body>
 </html>
