--- a/websites/seite2.html
+++ b/websites/seite2.html
@@ -25,9 +25,9 @@
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
-        <img src="..\pictures\black.png" id="pictures" alt="My test image" />
+        <p id="Text">
+            <u><b>Aufgabe 2:</b></u><br>
+        </p>
     </div>
-
-    <img id="" src="" alt="">
 </body>
 </html>
