--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -23,13 +23,13 @@
         <a href=".\seite1.html"><button id="menu1" class="other_buttons">Aufgabe 1</button></a>
         <a href=".\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
-        <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
-        <a href=".\seite5.html"><button id="menu5" class="other_buttons">Aufgabe 5</button></a>
         <p id="Text">
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            E
+            A) Erstellt ein Text-Element mit einem beliebigen Text welcher in einer beliebigen Farbe ist.<br>
+            <br>
+            B)
         </p>
     </div>
 </body>
