modified:   websites/seite1.html

--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -27,9 +27,11 @@
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            A) Erstellt ein Text-Element mit einem beliebigen Text welcher in einer beliebigen Farbe ist.<br>
+            A) Erstellt ein Text-Element mit einem beliebigen Text.<br>
             <br>
-            B)
+            B) Ändert den Text zu Bold, Italic und Unterstrichen<br>
+            <br>
+            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles)
         </p>
     </div>
 </body>
