modified:   websites/seite2.html 	modified:   websites/seite3.html

--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -23,9 +23,15 @@
         <a href=".\seite1.html"><button id="menu1" class="other_buttons">Aufgabe 1</button></a>
         <a href=".\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
-
         <p id="Text">
-            <u><b>Aufgabe 3:</b></u><br>
+            <u><b>Aufgabe 1:</b></u><br>
+            <br>
+            <br>
+            A) Erstellt ein Text-Element mit einem beliebigen Text.<br>
+            <br>
+            B) Ändert den Text zu Bold, Italic und Unterstrichen<br>
+            <br>
+            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles)
         </p>
     </div>
 </body>
