--- a/websites/seite2.html
+++ b/websites/seite2.html
@@ -24,7 +24,14 @@
         <a href=".\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <p id="Text">
-            <u><b>Aufgabe 2:</b></u><br>
+            <u><b>Aufgabe 1:</b></u><br>
+            <br>
+            <br>
+            A) Erstellt ein Text-Element mit einem beliebigen Text.<br>
+            <br>
+            B) Ändert den Text zu Bold, Italic und Unterstrichen<br>
+            <br>
+            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles)
         </p>
     </div>
 </body>
