modified:   websites/seite2.html

--- a/websites/seite2.html
+++ b/websites/seite2.html
@@ -27,11 +27,11 @@
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            A) <br>
+            A) Erstellt ein Tabelle mit beliebigen Zellen Namen <br>
             <br>
-            B) <br>
+            B) Färbt den Zellen Text rot<br>
             <br>
-            C) 
+            C) Fügt ein Bild in die Tabelle ein
         </p>
     </div>
 </body>
