modified:   websites/seite3.html

--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -27,7 +27,7 @@
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            A) <br>
+            A) Erstellt ein Formular mit 3 labeln und einem Anmelde Button (benutzt < input >)<br>
             <br>
             B) <br>
             <br>
