--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href=".\websites\seite1.html"><button id="menu1" class="other_buttons">Aufgabe 1</button></a>
         <a href=".\websites\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
+        <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <p id="Text">
             <br>
             <u><b>Schritt 1:</b></u><br>
