modified:   websites/seite1.html

--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -28,7 +28,7 @@
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            A) Erstellt ein Text-Element mit einem beliebigen Text.<br>
+            A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
             <br>
             B) Ändert den Text zu Bold, Italic und Unterstrichen<br>
             <br>
