modified:   websites/seite1.html 	modified:   websites/seite2.html 	modified:   websites/seite3.html

--- a/websites/seite2.html
+++ b/websites/seite2.html
@@ -28,11 +28,11 @@
             <u><b>Aufgabe 2:</b></u><br>
             <br>
             <br>
-            A) Erstellt ein Tabelle mit beliebigen Zellen Namen <br>
+            A) Erstellt ein Tabelle mit beliebigen Zellen Namen.<br>
             <br>
-            B) Färbt den Zellen Text rot<br>
+            B) Färbt den Zellen Text rot.<br>
             <br>
-            C) Fügt ein Bild in die Tabelle ein
+            C) Fügt ein Bild in die Tabelle ein.
         </p>
     </div>
 </body>
