--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -31,7 +31,7 @@
             <u><b>Aufgabe 3:</b></u><br>
             <br>
             <br>
-            A) Erstellt ein Formular mit 3 labeln und einem Anmelde Button (benutzt < input >)<br>
+            A) Erstellt ein Formular mit 3 labeln und einem Anmelde Button (benutzt < input >).<br>
             <br>
             B) <br>
             <br>
