--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -30,9 +30,9 @@
             <br>
             A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
             <br>
-            B) Ändert den Text zu Bold, Italic und Unterstrichen<br>
+            B) Ändert den Text zu Bold, Italic und Unterstrichen.<br>
             <br>
-            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles)
+            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles).
         </p>
     </div>
 </body>
