modified:   websites/seite3.html

--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -31,11 +31,9 @@
             <u><b>Aufgabe 3:</b></u><br>
             <br>
             <br>
-            A) Erstellt eine Liste mit 3 Zeilen/Punkten.<br>
+            A) Erstellt eine Liste mit 3 Zeilen/Punkten und beliebigen Text.<br>
             <br>
-            B) <br>
-            <br>
-            C) 
+            B) Erstellt einen Hyperlink welcher euch zur PMHS-Website leitet.
         </p>
     </div>
 </body>
