modified:   websites/seite3.html

--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -33,7 +33,9 @@
             <br>
             A) Erstellt eine Liste mit 3 Zeilen/Punkten und beliebigen Text.<br>
             <br>
-            B) Erstellt einen Hyperlink welcher euch zur PMHS-Website leitet.
+            B) Erstellt einen Hyperlink welcher euch zur PMHS-Website leitet.<br>
+            <br>
+            C) Erstellt einen Button welcher euch zu der PMHS-Website leitet.
         </p>
     </div>
 </body>
