modified:   index.html 	modified:   websites/seite1.html 	modified:   websites/seite2.html 	modified:   websites/seite3.html 	modified:   websites/seite4.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href=".\websites\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
         <a href=".\websites\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\websites\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
+        <a href=".\websites\lösungen.html"><button id="menu5" class="other_buttons">Lösungen</button></a>
         <p id="Text">
             <br>
             <u><b>Schritt 1:</b></u><br>
