--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -27,6 +27,7 @@
         <a href=".\seite2.html"><button id="menu2" class="other_buttons">Aufgabe 2</button></a>
         <a href=".\seite3.html"><button id="menu3" class="other_buttons">Aufgabe 3</button></a>
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
+        <a href=".\lösungen.html"><button id="menu5" class="other_buttons">Lösungen</button></a>
         <p id="Text">
             <u><b>Aufgabe 3:</b></u><br>
             <br>
