modified:   "websites/l\303\266sungen.html"

--- a/websites/lösungen.html
+++ b/websites/lösungen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aufgabe 4</title>
+    <title>Lösungen</title>
     <link rel="stylesheet" href="..\CSS\styles.css">
     <style>
         p{
@@ -26,7 +26,7 @@
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\lösungen.html"><button id="menu5" class="other_buttons">Lösungen</button></a>
         <p id="Text">
-            <u><b>Aufgabe 4:</b></u><br>
+            <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
             A) <br>
