modified:   "websites/l\303\266sungen.html"

--- a/websites/lösungen.html
+++ b/websites/lösungen.html
@@ -15,6 +15,10 @@
         #menu5{
             border-color: #00ff88;
         }
+        #Warnung{
+            color: #b90000;
+            font-size: 25pt;
+        }
     </style>
 </head>
 <body>
@@ -26,6 +30,10 @@
         <a href=".\seite4.html"><button id="menu4" class="other_buttons">Aufgabe 4</button></a>
         <a href=".\lösungen.html"><button id="menu5" class="other_buttons">Lösungen</button></a>
         <p id="Text">
+            <u><b id="Warnung">!!Versucht bitte zu erst die Aufgaben zu machen!!</b></u><br>
+            <br>
+            <br>
+            <br>
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
