modified:   "websites/l\303\266sungen.html"

--- a/websites/lösungen.html
+++ b/websites/lösungen.html
@@ -13,7 +13,7 @@
             position: absolute; left: 50px; top: 125px;
         }
         #menu5{
-            border-color: #00ff88;
+            border-color: #b90000;
         }
         #Warnung{
             color: #b90000;
