modified:   index.html 	modified:   websites/seite1.html

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
             <br>
             Öffnet das Programm "Visual Studio Code" und erstellt eine index.html Datei.<br>
             <br>
-            Diese erstellt ihr indem ihr oben links auf den Reiter "File"/"Datei" klickt und dann auf "New File"/"Neue Datei" klickt.<br>
-            Es sollte ein kleines Dialog-Fenster erscheinen. Die Datei bennent ihr bitte wie folgt: index.html<br>
+            Diese erstellt ihr indem ihr in eurem :H-Laufwerk einen neuen Ordner namens "HTML" erstellt.<br>
+            In diesem Ordner fügt ihr einen weiteren Ordner ein welchen ihr "Websiten" bennent.<br>
+            Erstellt nun eine neue Text-Datei in dem Ordner "HTML". Die Datei bennent ihr bitte wie folgt um: index.html<br>
             Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt, seid ihr bereit für Schritt 2.<br>
             <br>
             <br>
