--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -31,7 +31,7 @@
             <br>
             A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
             <br>
-            B) Ändert den Text zu Bold, Italic und Unterstrichen.<br>
+            B) Ändert den Text zu Bold, Italic, Unterstrichen und zentriert ihn.<br>
             <br>
             C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles).
         </p>
