modified:   index.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
             Öffnet das Programm "Visual Studio Code" und erstellt eine index.html Datei.<br>
             <br>
             Diese erstellt ihr indem ihr in eurem :H-Laufwerk einen neuen Ordner namens "HTML" erstellt.<br>
-            In diesem Ordner fügt ihr einen weiteren Ordner ein welchen ihr "Websiten" bennent.<br>
-            Erstellt nun eine neue Text-Datei in dem Ordner "HTML". Die Datei bennent ihr bitte wie folgt um: index.html<br>
-            Nachdem ihr diese Datei erstellt und in eurem :H-Laufwerk gespeichert habt, seid ihr bereit für Schritt 2.<br>
+            In diesem Ordner fügt ihr einen weiteren Ordner ein welchen ihr "Websiten" bennent. Erstellt nun<br>
+            eine neue Text-Datei in dem Ordner "HTML". Die Datei bennent ihr bitte wie folgt um: index.html<br>
+            Öffnet nun das Programm "Visual Studio Code". Oben links klickt auf "File"/"Datei",<br>
+            dann auf "Open Folder"/"Ornder öffnen". Wählt euren Ordner aus. Nachdem ihr diese Datei erstellt und<br>
+            in eurem :H-Laufwerk gespeichert habt, seid ihr bereit für Schritt 2.<br>
             <br>
             <br>
             <u><b>Schritt 2:</b></u><br>
