modified:   index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML Dokumentation (Englisch (besser))</a><br>
             <a href="https://editorhtmlonline.com/de/" target="_blank">Visueller HTML Editor (Wer diesen braucht)</a><br>
             <br>
-            Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programieren.<br>
+            Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programmieren.<br>
             <br>
             <u><b>Zeit: ca. 7 Minuten</u></b>
             <br>
