--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -15,6 +15,10 @@
         #menu1{
             border-color: #00ff88;
         }
+        #Warnung{
+            color: #b90000;
+            font-size: 18pt;
+        }
     </style>
 </head>
 <body>
@@ -27,6 +31,10 @@
         <a href=".\lösungen.html"><button id="menu5" class="other_buttons">Lösungen</button></a>
         <p id="Text">
             <u><b>Aufgabe 1:</b></u><br>
+            <br>
+            <br>
+            <u id="Warnung"><b>Achtung:</b></u> Wenn ihr diese Aufgaben macht werden all elemente auf der selben Stelle angezeigt.<br>
+            Damit das nicht der Fall ist, müsst ihr CSS-Styles verwenden (Siehe Englische Website)!<br>
             <br>
             <br>
             A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
