new file:   pictures/CSSPositionBild.png 	modified:   websites/seite1.html

--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -36,6 +36,10 @@
             <u id="Warnung"><b>Achtung:</b></u> Wenn ihr diese Aufgaben macht werden all elemente auf der selben Stelle angezeigt.<br>
             Damit das nicht der Fall ist, müsst ihr CSS-Styles verwenden (Siehe Englische Website)!<br>
             <br>
+            Beispiel für einen positionierten Text:<br>
+            <br>
+            <img src="..\pictures\CSSPositionBild.png"/><br>
+            <br>
             <br>
             A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
             <br>
