--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -33,19 +33,29 @@
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            <u id="Warnung"><b>Achtung:</b></u> Wenn ihr diese Aufgaben macht werden all elemente auf der selben Stelle angezeigt.<br>
+            <u id="Warnung"><b>Achtung:</b></u> Wenn ihr diese Aufgaben bearbeitet werden all elemente auf der selben Stelle angezeigt.<br>
             Damit das nicht der Fall ist, müsst ihr CSS-Styles verwenden (Siehe Englische Website)!<br>
             <br>
-            Beispiel für einen positionierten Text:<br>
+            Beispiel für einen positionierten Text mit Farbe und Schriftgröße:<br>
             <br>
             <img src="..\pictures\CSSPositionBild.png"/><br>
+            <br>
             <br>
             <br>
             A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
             <br>
             B) Ändert den Text zu Bold, Italic, Unterstrichen und zentriert ihn.<br>
             <br>
-            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles).
+            C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles).<br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </p>
     </div>
 </body>
