modified:   websites/seite1.html

--- a/websites/seite1.html
+++ b/websites/seite1.html
@@ -42,9 +42,9 @@
             <br>
             <br>
             <br>
-            A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart.<br>
+            A) Erstellt ein Text-Element mit einem beliebigen Text und ändert die Schriftart (Tipp: Sucht nach "font-family").<br>
             <br>
-            B) Ändert den Text zu Bold, Italic, Unterstrichen und zentriert ihn.<br>
+            B) Ändert den Text zu Bold, Italic und Unterstrichen<br>
             <br>
             C) Versucht dem Text eine beliebige Farbe hinzuzufügen (Tipp: sucht auf der Enlischen Website nach Styles).<br>
             <br>
