modified:   websites/seite4.html

--- a/websites/seite4.html
+++ b/websites/seite4.html
@@ -29,11 +29,11 @@
             <u><b>Aufgabe 4:</b></u><br>
             <br>
             <br>
-            A) <br>
+            A) Ihr dürft nun eure Website so gestalten wie ihr wollt, ihr solltet genug Wissen haben um das zu tun.<br>
+            Wie immer dürft ihr natürlich die Dokumentationen benutzen.<br>
             <br>
-            B) <br>
-            <br>
-            C) 
+            B) Für die, denen langweilig ist (Christoph), können veruchen mehrere Websiten anzulegen und diese mit<br>
+            Buttons und hyperlink zu verbinden
         </p>
     </div>
 </body>
