modified:   websites/seite3.html

--- a/websites/seite3.html
+++ b/websites/seite3.html
@@ -34,7 +34,7 @@
             <br>
             A) Erstellt eine Liste mit 3 Zeilen/Punkten und beliebigen Text.<br>
             <br>
-            B) Erstellt einen Hyperlink welcher euch zur PMHS-Website leitet.<br>
+            B) Erstellt einen Hyperlink-Text welcher euch zur PMHS-Website leitet.<br>
             <br>
             C) Erstellt einen Button welcher euch zu der PMHS-Website leitet.
         </p>
