modified:   websites/seite4.html 	modified:   websites/seite4.html

--- a/websites/seite4.html
+++ b/websites/seite4.html
@@ -32,7 +32,7 @@
             A) Ihr dürft nun eure Website so gestalten wie ihr wollt, ihr solltet genug Wissen haben um das zu tun.<br>
             Wie immer dürft ihr natürlich die Dokumentationen benutzen.<br>
             <br>
-            B) Für die, denen langweilig ist (Christoph), können veruchen mehrere Websiten anzulegen und diese mit<br>
+            B) Für die, denen langweilig ist, können veruchen mehrere Websiten anzulegen und diese mit<br>
             Buttons und hyperlink zu verbinden
         </p>
     </div>
