modified:   websites/seite4.html

--- a/websites/seite4.html
+++ b/websites/seite4.html
@@ -33,7 +33,7 @@
             Wie immer dürft ihr natürlich die Dokumentationen benutzen.<br>
             <br>
             B) Für die, denen langweilig ist, können veruchen mehrere Websiten anzulegen und diese mit<br>
-            Buttons und hyperlink zu verbinden
+            Buttons und Hyperlinks zu verbinden
         </p>
     </div>
 </body>
