modified:   "websites/l\303\266sungen.html"

--- a/websites/lösungen.html
+++ b/websites/lösungen.html
@@ -37,11 +37,76 @@
             <u><b>Aufgabe 1:</b></u><br>
             <br>
             <br>
-            A) <br>
+            A)<br>
             <br>
-            B) <br>
+            <img src="..\pictures\Lösung1A.png"/><br>
             <br>
-            C) 
+            B)<br>
+            <br>
+            <img src="..\pictures\Lösung1B.png"/><br>
+            <br>
+            C)<br>
+            <br>
+            <img src="..\pictures\Lösung1C.png"/><br>
+            <br>
+            <br>
+            <br>
+            <u><b>Aufgabe 2:</b></u><br>
+            <br>
+            <br>
+            A)<br>
+            <br>
+            <img src="..\pictures\Lösung2A.png"/><br>
+            <br>
+            B)<br>
+            <br>
+            <img src="..\pictures\Lösung2B.png"/><br>
+            <br>
+            C)<br>
+            <br>
+            <img src="..\pictures\Lösung2C.png"/><br>
+            <br>
+            <br>
+            <u><b>Aufgabe 3:</b></u><br>
+            <br>
+            <br>
+            A)<br>
+            <br>
+            <img src="..\pictures\Lösung3A.png"/><br>
+            <br>
+            B)<br>
+            <br>
+            <img src="..\pictures\Lösung3B.png"/><br>
+            <br>
+            C)<br>
+            <br>
+            <img src="..\pictures\Lösung3C.png"/><br>
+            <br>
+            <br>
+            <br>
+            <u><b>Aufgabe 4:</b></u><br>
+            <br>
+            <br>
+            B)<br>
+            <br>
+            <img src="..\pictures\Lösung4B1.png"/><br>
+            <img src="..\pictures\Lösung4B2.png"/><br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </p>
     </div>
 </body>
