modified:   index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <br>
             Wenn ihr das alles getan habt, versucht einfach mal drauf los zu programmieren.<br>
             <br>
-            <u><b>Zeit: ca. 7 Minuten</u></b>
+            <u><b>Zeit: ca. 7 - 10 Minuten</u></b>
             <br>
             <br>
             <br>
