--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Fußballspieler/-innen treffen sich am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>. </p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Volleyballspieler/-innen treffen sich bei der <b>Albert-Schäffle-</b> und der <b>Fritz-Ruoff-Schule</b> auf dem <b>Säaer</b>, Nürtingen. </p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Volleyballspieler/-innen treffen sich bei der <b>Albert-Schäffle-</b> und der <b>Fritz-Ruoff-Schule</b> auf dem <b>Säer</b>, Nürtingen. </p>
             </div> 
         </div>
 
