--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -123,7 +123,7 @@
           <img src="../images/pexels-alanmoraales-28037036.jpg" alt="Volleyball" style="border-radius: 20px; width: 100%;">
         </div>
         <div style="height: 100%; max-height: 250px; width: 100%; max-width: 230px; margin-bottom: 12.5%; margin-top: 12.5%;">
-          <p style="color: #00E65C; text-align: left; margin-bottom: -20%;">Kontaktpersonen</p>
+          <p style="color: #FFAA00; text-align: left; margin-bottom: -20%;">Kontaktpersonen</p>
           <p style="text-align: left; margin-bottom: -25%;">Sabrina Beck</p>
           <p style="text-align: left; margin-bottom: -20%;">becksa@pmhs.de</p>
           <p style="text-align: left; margin-bottom: -25%;">Tobias Berndt</p>
