modified:   index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="RegelContainer">
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Stollenschuhe mit Schraubstollen sind verboten</p>
+                <p style="text-align: center; color: #000000;">Stollenschuhe mit Schraubstollen sind <b>verboten!</b></p>
                 <div class="image-container">
                     <img src="images/images_1.png" alt="Uhr" style="height: 100%; width: 100%;">
                 </div>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">das erste Team kostet <br> <br> <b>10€</b> <br><br><br> jedes weitere <br> <br> <b>5€</b></p>
+                <p style="text-align: center; color: #000000;">Das erste Team kostet <br> <br> <b>10€</b> <br><br><br> jedes weitere <br> <br> <b>5€</b></p>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;">Teams, die diese Gebühr <b>nicht</b> rechtzeitig bezahlen werden <b>nicht</b> in das Tunier einbezogen.</p>
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;">Teams, die diese Gebühr <b>nicht</b> rechtzeitig bezahlen, werden <b>nicht</b> in das Turnier einbezogen.</p>
             </div> 
         </div>
 
@@ -51,7 +51,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;"></p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Montag, Dienstag, Mittwoch, Freitag 2. Pause E 4.05<br>Donnerstag 2. Pause E 2.05</p>
             </div> 
         </div>
 
